[gd_scene load_steps=6 format=3 uid="uid://l6cmjpqel81b"]

[ext_resource type="Script" uid="uid://b4nu0eehv0waq" path="res://addons/GdPlanningAI/scripts/nodes/gdpai_location_data.gd" id="2_ju0i4"]
[ext_resource type="Texture2D" uid="uid://txqc5xqcp8jr" path="res://addons/GdPlanningAI/examples/2D/assets/banana.png" id="3_ethwo"]
[ext_resource type="Script" uid="uid://buur1dj8yvfc1" path="res://addons/GdPlanningAI/scripts/nodes/gdpai_interactable.gd" id="3_tlk72"]
[ext_resource type="Script" uid="uid://womn3ofb7q50" path="res://addons/GdPlanningAI/examples/hunger/sample_food_object.gd" id="4_iet1d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kuita"]
size = Vector2(32, 32)

[node name="Banana" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_kuita")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_ethwo")

[node name="GdPAILocationData" type="Node" parent="." node_paths=PackedStringArray("location_node_2d", "entity")]
script = ExtResource("2_ju0i4")
location_node_2d = NodePath("..")
entity = NodePath("..")

[node name="GdPAIInteractable" type="Node" parent="." node_paths=PackedStringArray("entity")]
script = ExtResource("3_tlk72")
max_interaction_distance = 32.0
entity = NodePath("..")

[node name="SampleFoodObject" type="Node" parent="." node_paths=PackedStringArray("interactable_attribs", "location_data", "entity")]
script = ExtResource("4_iet1d")
hunger_value = 20.0
interactable_attribs = NodePath("../GdPAIInteractable")
location_data = NodePath("../GdPAILocationData")
entity = NodePath("..")
